--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -35,6 +35,18 @@
 					"id": -1,
 					"name": "comment-list",
 					"pathName": "pages/comment-list/comment-list",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "comment-add",
+					"pathName": "pages/comment-add/comment-add",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "preview",
+					"pathName": "pages/comment-preview/comment-preview",
 					"query": ""
 				}
 			]
