--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -52,6 +52,11 @@
 					"name": "preview",
 					"pathName": "pages/comment-preview/comment-preview",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "user",
+					"pathName": "pages/user/user"
 				}
 			]
 		}
