--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -56,7 +56,8 @@
 				{
 					"id": -1,
 					"name": "user",
-					"pathName": "pages/user/user"
+					"pathName": "pages/user/user",
+					"query": ""
 				}
 			]
 		}
