--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -57,6 +57,12 @@
 					"id": -1,
 					"name": "user",
 					"pathName": "pages/user/user",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "comment-detail",
+					"pathName": "pages/comment-detail/comment-detail",
 					"query": ""
 				}
 			]
